--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v4
       with:
-        images: ghcr.io/test/test
+        images: ghcr.io/alessandrominoccheri/test
         tags: |
           # minimal
           type=semver,pattern={{version}}
